projects/vb6parse/snapshots/parsers/cst/objects/call/call_statement_simple.snap
---
source: projects/vb6parse/tests/objects/call.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: CallStatement
      children:
        - kind: CallKeyword
          text: Call
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: MySubroutine
        - kind: LeftParenthesis
          text: (
        - kind: ArgumentList
          children: []
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
